guides/v2.2/config-guide/varnish/config-varnish.md
---
group: config-guide
subgroup: 09_Varnish
title: Configure and use Varnish
version: 2.2
github_link: config-guide/varnish/config-varnish.md
functional_areas:
  - Configuration
  - System
  - Setup
---

#### Contents

*	[Overview of the Varnish solution]  
*	[Varnish topology diagram]
*	[Process overview]
*	[Known issues]
*	Install Varnish and configure Magento to use it:
	*	[Install Varnish]
	*	[Configure Varnish and your web server]
	*	[Configure Magento to use Varnish]
	*	[Configure Magento to use multiple Varnish instances]
	*	[Final verification]
*	Use Varnish:
	*	[How Magento cache clearing works with Varnish]
	*	[How Varnish caching works]
*	[Troubleshooting 503 (Backend Fetch Failed) errors]

## Overview of the Varnish solution {#config-varnish-over}
[Varnish Cache] is an open source web application accelerator (also referred to as an *HTTP accelerator* or *caching HTTP reverse proxy*). Varnish stores (or caches) files or fragments of files in memory; this enables Varnish to reduce the response time and network bandwidth consumption on future, equivalent requests. Unlike web servers like Apache and nginx, Varnish was designed for use exclusively with the HTTP protocol.

Magento 2 supports Varnish 4.x and 5.0.

{:.bs-callout .bs-callout-warning}
We _strongly recommend_ you use Varnish in production. The built-in full-page caching (to either the file system or [database]) is much slower than Varnish, and Varnish is designed to accelerate HTTP traffic.

For more information about Varnish, see:

*	[Wikipedia]
*	[The Big Varnish Picture]
*	[Varnish startup options]
*	[Varnish and Website Performance]

## Varnish topology diagram {#varnish-arch}

The following figure shows a basic view of Varnish in your Magento topology.

![Basic Varnish diagram]

In the preceding figure, users' HTTP requests over the internet result in numerous requests for CSS, HTML, JavaScript, and images (referred to collectively as *assets*). Varnish sits in front of the web server and proxies these requests to the web server.

As the web server returns assets, cacheable assets are stored in Varnish. Any subsequent requests for those assets are fulfilled by Varnish (meaning, the requests don't reach the web server). Varnish returns cached content extremely quickly. The results are faster response times to return the content to users and a reduced number of requests that must be fulfilled by Magento.

Assets cached by Varnish expire at a configurable interval or are replaced by newer versions of the same assets. You can also clear the cache manually either using the {% glossarytooltip 18b930cf-09cc-47c9-a5e5-905f86c43f81 %}Magento Admin{% endglossarytooltip %} or the [`magento cache:clean`] command.

## Process overview {#config-varnish-process}

This topic discusses how to initially install Varnish with a minimal set of parameters and test that it works. Then you'll export a Varnish configuration from the Magento {% glossarytooltip 29ddb393-ca22-4df9-a8d4-0024d75739b1 %}Admin{% endglossarytooltip %} and test it again.

The process can be summarized as follows:

1.	Install Varnish and test it by accessing any Magento page to see if you're getting HTTP response headers that indicate Varnish is working.
2.	Install the Magento software and use the Magento Admin to create a Varnish configuration file.
3.	Replace your existing Varnish configuration file with the one generated by the Admin.
3.	Test everything again.

	If there is nothing in your `<your Magento install dir>/var/page_cache` directory, you've successfully configured Varnish with Magento!

{:.bs-callout .bs-callout-info #info}
* Except where noted, you must enter all commands discussed in this topic as a user with `root` privileges.
* This topic is written for Varnish on CentOS and Apache 2.2. If you're setting up Varnish in a different environment, some commands are likely different. Consult Varnish documentation for more information.

## Known issues {#config-varnish-issues}

We know of the following issues with Varnish:

*	[Varnish does not support SSL]

	As an alternative, use SSL termination or an [SSL termination proxy].

*	If you manually delete the contents of the `<your Magento install dir>/var/cache` directory, you must restart Varnish.

*	Possible error installing Magento:

		Error 503 Service Unavailable
		Service Unavailable
		XID: 303394517
		Varnish cache server

	If you experience this error, edit `default.vcl` and add a timeout to the `backend` stanza as follows:

		backend default {
	      .host = "127.0.0.1";
	      .port = "8080";
	      .first_byte_timeout = 600s;
		}

#### Next step
[Install Varnish]

<!-- Link Definitions -->
[Overview of the Varnish solution]: #config-varnish-over
[Varnish topology diagram]: #varnish-arch
[Process overview]: #config-varnish-process
[Known issues]: #config-varnish-issues
[Install Varnish]: {{ page.baseurl }}/config-guide/varnish/config-varnish-install.html
[Configure Varnish and your web server]: {{ page.baseurl }}/config-guide/varnish/config-varnish-configure.html
[Configure Magento to use Varnish]: {{ page.baseurl }}/config-guide/varnish/config-varnish-magento.html
[Configure Magento to use multiple Varnish instances]: {{ page.baseurl }}/config-guide/varnish/use-varnish-cache.html
[Final verification]: {{ page.baseurl }}/config-guide/varnish/config-varnish-final.html
[How Magento cache clearing works with Varnish]: {{ page.baseurl }}/config-guide/varnish/use-varnish-cache.html
[How Varnish caching works]: {{ page.baseurl }}/config-guide/varnish/use-varnish-cache-how.html
[Troubleshooting 503 (Backend Fetch Failed) errors]: {{ page.baseurl }}/config-guide/varnish/tshoot-varnish-503.html
[Varnish Cache]: https://www.varnish-cache.org/
{:target="_blank"}
[database]: {{ page.baseurl }}/config-guide/database/database.html
[Wikipedia]: https://en.wikipedia.org/wiki/Varnish_%28software%29
{:target="_blank"}
[The Big Varnish Picture]: https://www.varnish-cache.org/docs/trunk/users-guide/intro.html
{:target="_blank"}
[Varnish startup options]: https://www.varnish-cache.org/docs/trunk/reference/varnishd.html#ref-varnishd-options
{:target="_blank"}
[Varnish and Website Performance]: https://www.varnish-cache.org/docs/trunk/users-guide/performance.html#users-performance
{:target="_blank"}
[`magento cache:clean`]: {{ page.baseurl }}/config-guide/cli/config-cli-subcommands-cache.html
[Varnish does not support SSL]: https://www.varnish-cache.org/docs/3.0/phk/ssl.html
{:target="_blank"}
[SSL termination proxy]: https://en.wikipedia.org/wiki/TLS_termination_proxy
{:target="_blank"}

<!-- image Definitions -->
[Basic Varnish diagram]: {{ site.baseurl }}/common/images/varnish_basic.png
{:width="400px"}
